修改登录页面和websocket发布订阅

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
-spring.resources.static-locations=classpath:/static
+spring.resources.static-locations=classpath:/plugins
 server.port=8081
 ##undertow配置
 server.undertow.io-threads=4
