--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ server.undertow.worker-threads=20
 server.undertow.buffer-size=1024
 server.undertow.direct-buffers=true
 spring.jackson.default-property-inclusion=non-null
+# 默认配置会自动在 /public /static /resources 目录寻找静态资源, 故不需要 /static 等前缀
 spring.mvc.static-path-pattern=/**
 #mysql连接配置
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/wx_app?&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
